Version 3.4.3-Beta.
Added bStats integration, you can enable / disable this in the plugin, or through bStats.
Updated deprecated use of Locale.
Added option to set the system-level locale.
Added 4 new languages:
- Polish.
- Danish.
- Dutch.
- Portuguese.
Fixed experience market being controlled by the enchant commands.
Added per-world support with multiple options.